--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=springmvc
+
+#?? ?? ?? ??(?? info)
+#logging.level.root=info
+
+#hello.springmvc.springmvc ???? ? ?? ?? ?? ??
+#logging.level.hello.springmvc.springmvc=trace;
+# ?? ??? debug ?? / ?? ??? info ??
